# src/app/core/api/index.ts
@@ -18,6 +18,9 @@ export type { DirectionValues } from './models/direction-values';
 export type { FilterValue } from './models/filter-value';
 export type { Format } from './models/format';
 export type { FormatVersion } from './models/format-version';
+export type { HealthCheckError } from './models/health-check-error';
+export type { HealthCheckResponse } from './models/health-check-response';
+export type { HealthCheckResult } from './models/health-check-result';
 export type { SearchFilters } from './models/search-filters';
 export type { SearchItem } from './models/search-item';
 export type { SearchQueryRequest } from './models/search-query-request';
